--- a/style.css
+++ b/style.css
@@ -1,5 +1,14 @@
-sketch {
-  
-  
-  
+canvas#sketch{
+  position:absolute;
+  left:0;
+  top:0;
+  z-index:-1;
 }
+
+#test {
+      width: 20%;
+      height: 50%;
+      padding: 10px;
+      margin: 8%;
+      border: 1px solid red;
+    }
